--- a/D2.4/D2_4.tex
+++ b/D2.4/D2_4.tex
@@ -41,7 +41,7 @@
 \subtitle{ Definition of the methods used to perform the formal description}
 
 %set the date of the report here
-\date{September 2013}
+\date{December 2013}
 
 %define a list of authors and their affiliation here
 
@@ -65,7 +65,7 @@
 
 \begin{abstract}
 This document give first an introduction to formal  methods.
-In a second part, it proposes the method to  fllow during the openETCs project according to the methodology selection.
+In a second part, it proposes the method to  follow during the openETCs project according to the methodology selection.
 
 \end{abstract}
 
@@ -134,7 +134,8 @@ the document \\
 \hline  
 00.04 & 26/09/2013 & M. Petit-Doche, D. Mentré & First version of sections 7, 8 and 9   \\
 \hline  
-
+00.05 & 16/12/2013 & M. Petit-Doche & Section 7  \\
+\hline  
 \end{tabular}
 
 
