--- a/D2.4/formal_design.tex
+++ b/D2.4/formal_design.tex
@@ -1,5 +1,5 @@
 \section{Formal approaches for the design and development of a system}
-
+\label{sec:formalDesign}
 
 Very roughly, from an engineering point of view three kinds of formal
 methods can be used for the design and development of a system:
