--- a/D2.4/formal_intro.tex
+++ b/D2.4/formal_intro.tex
@@ -1,6 +1,7 @@
 
 
 \section{Short introduction on formal approaches to  design and validate critical systems}
+\label{sec:formalIntro}
 
 \subsection{What is a formal approach?}
 
