--- a/D2.4/formal_vnv.tex
+++ b/D2.4/formal_vnv.tex
@@ -1,5 +1,6 @@
 
 \section{Formal approaches for V\&V of a critical system}
+\label{sec:formalVnV}
 
 The various approaches previously presented can be used to check
 various kind of properties:
