--- a/D2.4/intro.tex
+++ b/D2.4/intro.tex
@@ -1,12 +1,14 @@
 \section{Introduction}
+\label{sec:intro}
 
 The purpose of this document is to describe, for the OpenETCS project, the means and methods used to perform the formal description.
 
 However the benchmark activities are not yet achieved in WP7, such the definition of the methods can not yet be done.
 
-For the intermediate version of the document, we propose a description of the benefits of formal approaches in the design, development, verification and validation of critical systems.
+For the intermediate version of the document, we propose a description of the benefits of formal approaches in the design, development, verification and validation of critical systems in sections \ref{sec:formalIntro}, \ref{sec:formalDesign} and \ref{sec:formalVnV}.
 
 For the final version, the document proposes the method to  follow during the OpenETCS project according to  the OpenETCS process  and requirements defined in D2.3  and D2.6.
+Section \ref{sec:guideline} gives some guidelines for design and VnV and some conventions. Section \ref{section:sysml} describes how to  use SysML in the OpenETCS process.
 
 \section{Reference documents}
 \label{sec:ref}
