--- a/D2.4/D2_4.tex
+++ b/D2.4/D2_4.tex
@@ -29,7 +29,7 @@
 
 
 %assign a report number here
-\reportnum{OETCS/WP2/D2.4~--~00.04}
+\reportnum{OETCS/WP2/D2.4~--~00.06}
 
 %define your workpackage here
 \wp{Work-Package 2: ``Definition''}
@@ -41,7 +41,7 @@
 \subtitle{ Definition of the methods used to perform the formal description}
 
 %set the date of the report here
-\date{December 2013}
+\date{January 2014}
 
 %define a list of authors and their affiliation here
 
@@ -135,6 +135,8 @@ the document \\
 00.04 & 26/09/2013 & M. Petit-Doche, D. Mentré & First version of sections 7, 8 and 9   \\
 \hline  
 00.05 & 16/12/2013 & M. Petit-Doche & Section 7  \\
+\hline  
+00.06 & 03/01/2014 & Uwe Steinke & Section 7.4 and 7.5  \\
 \hline  
 \end{tabular}
 
