--- a/D2.4/formal_vnv.tex
+++ b/D2.4/formal_vnv.tex
@@ -65,10 +65,11 @@ This is done using non formal techniques:
 
 \subsection{Formal approaches for safety}
 
-\begin{comment}
-proof of safety requirements, static analysis, safety analysis, traceability,...
-\end{comment}
 
+Formal approaches are usually  used to support safety analysis to  automatize some reasoning in view to obtain an exhaustive analysis.
+One possibility is to use dedicated language as AltaRica, or formal language and model-checking  to inject fault in a model and analyse the effects. This can allowed to support FMEA or Fault-Tree generation.
+
+A second possibility is to use formal methods to focus on the verification and validation of safety requirements on a formal model during system design.
 
 
 
