--- a/D2.4/D2_4.tex
+++ b/D2.4/D2_4.tex
@@ -29,7 +29,7 @@
 
 
 %assign a report number here
-\reportnum{OETCS/WP2/D2.4~--~00.06}
+\reportnum{OETCS/WP2/D2.4~--~00.07}
 
 %define your workpackage here
 \wp{Work-Package 2: ``Definition''}
@@ -85,7 +85,7 @@ Work Package &  WP2  \\
 Deliverable ID or doc. ref. & D2.4\\
 \hline
 Document title & Definition of the methods used to perform the formal description \\
-Document version & 00.04 \\
+Document version & 00.07 \\
 Document authors (org.)  & Marielle Petit-Doche (Systerel)  \\
   & David Mentré (Mitsubishi Electric R\&D Centre Europe)  \\
   & Mathias Güdemann (Systerel)  \\
@@ -96,7 +96,7 @@ Document authors (org.)  & Marielle Petit-Doche (Systerel)  \\
 \hline
 \multicolumn{2}{|c|}{Review information} \\
 \hline
-Last version reviewed & 00.01 \\
+Last version reviewed & 00.04 \\
 \hline
 Main reviewers & S. Baro (SNCF) \\
 & P. Mahlmann (DB), B. Hekele (DB)\\
@@ -111,7 +111,7 @@ Main reviewers & S. Baro (SNCF) \\
 \hline
   &  Name & Role & Date   \\
 \hline  
-Written by    &  Marielle Petit-Doche & T2.4 Sub-Task Leader  & September 2013 \\
+Written by    &  Marielle Petit-Doche & T2.4 Sub-Task Leader  & January 2014 \\
 & David Mentré & & \\
 & Matthias Güdemann & & \\
 \hline
@@ -137,6 +137,8 @@ the document \\
 00.05 & 16/12/2013 & M. Petit-Doche & Section 7  \\
 \hline  
 00.06 & 03/01/2014 & Uwe Steinke & Section 7.4 and 7.5  \\
+\hline  
+00.07 & 09/01/2014 & M. Petit-Doche & Issues \#33,   \\
 \hline  
 \end{tabular}
 
@@ -195,12 +197,7 @@ the document \\
 
 \input{sysml.tex}
 
-
-\section{Approaches for low level design}
-
-\begin{comment}
-to  complete later: SCADE ? OS approaches ?
-\end{comment}
+\input{lowlevel.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 
