--- a/D2.4/D2_4.tex
+++ b/D2.4/D2_4.tex
@@ -29,7 +29,7 @@
 
 
 %assign a report number here
-\reportnum{OETCS/WP2/D2.4~--~00.07}
+\reportnum{OETCS/WP2/D2.4~--~01.00}
 
 %define your workpackage here
 \wp{Work-Package 2: ``Definition''}
@@ -85,7 +85,7 @@ Work Package &  WP2  \\
 Deliverable ID or doc. ref. & D2.4\\
 \hline
 Document title & Definition of the methods used to perform the formal description \\
-Document version & 00.07 \\
+Document version & 01.00 \\
 Document authors (org.)  & Marielle Petit-Doche (Systerel)  \\
   & David Mentré (Mitsubishi Electric R\&D Centre Europe)  \\
   & Mathias Güdemann (Systerel)  \\
@@ -138,7 +138,9 @@ the document \\
 \hline  
 00.06 & 03/01/2014 & Uwe Steinke & Section 7.4 and 7.5  \\
 \hline  
-00.07 & 09/01/2014 & M. Petit-Doche & Issues \#33,   \\
+00.07 & 09/01/2014 & M. Petit-Doche & Issues \#33, Sections 6.3, 7.1, 9  \\
+\hline  
+01.00 & 11/01/2014 & M. Petit-Doche & Issues \# 27, 36, 37, 39, Final version  \\
 \hline  
 \end{tabular}
 
