--- a/D2.4/lowlevel.tex
+++ b/D2.4/lowlevel.tex
@@ -1,17 +1,13 @@
 
 \section{Approaches for low level design}
 
-\begin{comment}
-to  complete later: SCADE ? OS approaches ?
-\end{comment}
+At the current stage of the project, SCADE has been chosen as default approach to  develop the formal  model of the on-board unit.
 
-\subsection{SCADE}
-
-\subsection{C Code}
-
-\subsection{Alternative open-source approaches}
+For more details on the approach \url{http://www.esterel-technologies.com/products/scade-suite/}.
 
 
-\begin{comment}
-to  complete later depending the choices
-\end{comment}
+C language has been chosen as implementation language for the executive software. To obtain a SIL4 software CENELEC recommendation shall be covered.
+
+For the moment no alternative open-source approaches is chosen.
+
+
