--- a/D2.4/openETCS_meth.tex
+++ b/D2.4/openETCS_meth.tex
@@ -205,11 +205,6 @@ Some \textit{issues} can be associated to  each items. These issues are characte
 \item[owner] the person in charge of the issue.
 \end{description}
 
-\begin{comment}
-TODO: do we need more information on issue , as author, ... ?
-
-Do we need to link to github issue tracker ?
-\end{comment}
 
 The figure \ref{fig:Common} gives the Ecore model of these elements.
 
@@ -371,7 +366,7 @@ The name shall be prefixed by "typ\_".
 
 \subsubsection{Variable naming convention}
 
-The naming of the variables should consist of at least a combination of a verb and an object using the passive form (for examples:   orderReceivedFromTrackside for a structure,     endOfMissionIsExecuted for a boolean)
+The naming of the variables may consist of at least a combination of a verb and an object using the passive form (for examples:   orderReceivedFromTrackside for a structure,     endOfMissionIsExecuted for a boolean)
 
 For the internal variables, i.e. those defined during the design activities to describe the state of the system and the exchanges between functions, the name shall be prefixed by "int\_".
 
